// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに…'] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。'] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんはバスの運転手なので運転席から離れない。'] 1`] = `
{
  "distance": 0.31,
  "input": "花子さんはバスの運転手なので運転席から離れない。",
  "result": "Covers",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんは市営バスの運転手なので、終点の後も乗っている。'] 1`] = `
{
  "distance": 0.35,
  "input": "花子さんは市営バスの運転手なので、終点の後も乗っている。",
  "result": "Covers",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは人を殺害し、見つからないように女性トイレに隠れた'] 1`] = `
{
  "distance": 0.39,
  "input": "山田さんは人を殺害し、見つからないように女性トイレに隠れた",
  "result": "Wrong",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは女性になりたくて女性用トイレに入った'] 1`] = `
{
  "distance": 0.32,
  "input": "山田さんは女性になりたくて女性用トイレに入った",
  "result": "Wrong",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは女性用トイレに入った'] 1`] = `
{
  "distance": 0.32,
  "input": "山田さんは女性用トイレに入った",
  "result": "Wrong",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは覗きをするために女性用トイレに入った。'] 1`] = `
{
  "distance": 0.3,
  "input": "山田さんは覗きをするために女性用トイレに入った。",
  "result": "Wrong",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは隠れるために女性用トイレに入った'] 1`] = `
{
  "distance": 0.31,
  "input": "山田さんは隠れるために女性用トイレに入った",
  "result": "Wrong",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['花子さんは死んでしまったため、終点でもずっと座っていた。'] 1`] = `
{
  "distance": 0.43,
  "input": "花子さんは死んでしまったため、終点でもずっと座っていた。",
  "result": "Wrong",
}
`;
